--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ sqlalchemy = "^2.0.21"
 alembic = "^1.12.0"
 psycopg2 = "^2.9.7"
 uvicorn = "^0.23.2"
+python-dotenv = "^1.0.0"
+asyncpg = "^0.28.0"
 
 
 [build-system]
