--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - pg-data:/var/lib/postgresql/data/
     ports:
-      - "5432:5432"
+      - "${DOCKER_DB_PORT}:${DOCKER_DB_PORT}"
   pgadmin:
     container_name: pgadmin_container
     image: dpage/pgadmin4
