--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2 = "^2.9.7"
 uvicorn = "^0.23.2"
 python-dotenv = "^1.0.0"
 asyncpg = "^0.28.0"
+fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
 
 
 [build-system]
