refactoring service to asyncpg

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ DEV=True
 
 COMPOSE_PROJECT_NAME=""
 
-DATABASE_URL="postgresql://db_user:db_password@localhost:5432/db_name"
+DATABASE_URL="postgresql+asyncpg://db_user:db_password@localhost:5432/db_name"
 
 DOCKER_DB_NAME="db_name"
 DOCKER_DB_USER="db_user"
