feat: router register

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DEV=True
 
+SECRET="SECRET"
+
 COMPOSE_PROJECT_NAME=""
 
 DATABASE_URL="postgresql+asyncpg://db_user:db_password@localhost:5432/db_name"
