camelCase in responce api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ uvicorn = "^0.23.2"
 python-dotenv = "^1.0.0"
 asyncpg = "^0.28.0"
 fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
+pyhumps = "^3.8.0"
 
 
 [build-system]
