--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ DOCKER_DB_PORT=5432
 
 PGADMIN_DEFAULT_EMAIL="pgadmin@admin.admin"
 PGADMIN_DEFAULT_PASSWORD="pgdmin_password"
+
+
+DOCKER_BACKEND_IMAGE="grishchenkonikita/ispent:backend"
+DOCKER_FRONTEND_IMAGE="grishchenkonikita/ispent:frontend"
