--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,13 @@ DOCKER_DB_PASSWORD="db_password"
 DOCKER_DB_HOST="localhost"
 DOCKER_DB_PORT=5432
 
+SMTP_USERNAME="noreply@ispent.ru"
+SMTP_PASSWORD=""
+SMTP_FROM="noreply@ispent.ru"
+SMTP_PORT=25
+SMTP_SERVER="smtp.timeweb.ru"
+SMTP_FROM_NAME="ispent.ru"
+
 PGADMIN_DEFAULT_EMAIL="pgadmin@admin.admin"
 PGADMIN_DEFAULT_PASSWORD="pgdmin_password"
 
