--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       uses: D3rHase/ssh-command-action@v0.2.2
-      host: ${{secrets.SSH_HOST}}
-      user: ${{secrets.SSH_USER}}
-      private_key: ${{secrets.SSH_PRIVATE_KEY}}
-      command: |
-        cd ${{ secrets.PROJECT_FOLDER }};
-        docker-compose pull;
-        docker-compose up -d;
+      with:
+        host: ${{secrets.SSH_HOST}}
+        user: ${{secrets.SSH_USER}}
+        private_key: ${{secrets.SSH_PRIVATE_KEY}}
+        command: |
+          cd ${{ secrets.PROJECT_FOLDER }};
+          docker-compose pull;
+          docker-compose up -d;
